[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "traceability-agent"
version = "0.1.0"
description = "Heuristic pipeline to map problems to user stories"
requires-python = ">=3.10"
authors = [{name = "Traceability Agent"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
traceability-agent = "traceability_agent.cli:main"
